fix background truncation issue

--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -75,6 +75,7 @@ body
   padding: 10px 10px 30px
   border-left: 1px solid #ddd
   border-right: 1px solid #ddd
+  overflow: hidden
   
 #footer
   @include bodyElems
